<resources>
    <string name="app_name">Onroad Mech</string>
    <string name="nav_header_title">Onroad Mech</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">About</string>
    <string name="menu_slideshow">Service Provider</string>

    <string name="request_repair_services">request repair services</string>
    <string name="request_towing_services">Request towing services</string>
    <string name="get_a_mechanic">Get a Mechanic</string>
    <string name="towing_services">Towing Services</string>
    <string name="info_on_self_car_fix">Info on self car fix</string>
    <string name="car_repair_help">Car Repair Help</string>
    <string name="meet_fellow_drivers_here">meet fellow drivers here</string>
    <string name="drivers_community">Drivers\' Community</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_car_repair_help">Self Car Repair</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Drivers\' Community</string>
    <string name="login_page">Login Page</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="i_don_t_have_an_account">I Don\'t Have An Account</string>
    <string name="title_activity_sign_up">Drivers\' Community</string>
    <string name="sign_up_page">Sign Up Page</string>
    <string name="choose_your_password">Choose Your Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_already_have_an_account">I Already Have An Account</string>
    <!-- Strings used for fragments for navigation -->
    <string name="about">This project is an android based application developed by Felix Nzioki Savali
    to provide assistance to motorists who may encounter
    Motor vehicle issues such as mechanical problems or even punctured tires.
    Motorists can also access towing services from any part of the   country from our service providers.</string>
    <string name="sevice_providers_page">Sevice Providers Page</string>
    <string name="terms_of_service"><u>Terms of service</u></string>
    <string name="_2_minumum_2_years_experience">2. Minumum 2 years experience.</string>
    <string name="_1_be_a_licensed_service_provider">1. Be a licensed service provider.</string>
    <string name="_3_pay_a_monthly_fee_of_ksh_2000_to_keep_your_account_active">3. Pay a monthly fee of Ksh. 2000 to keep your account active</string>
    <string name="ok_with_the_terms">Ok with the terms?</string>
    <string name="already_a_service_provider">Already a service Provider.,</string>
    <string name="login4">LogIn</string>
    <string name="register">Register</string>
    <string name="title_activity_s_reg_act">Service Provider</string>
    <string name="register_as_a_service_provider">Register As a Service Provider</string>
    <string name="service_offered">Service Offered:</string>
    <string name="enter_company_name">Enter company Name</string>
    <string name="company_name">Garage Name:</string>
    <string name="license_number">License Number:</string>
    <string name="service_2">Service 2</string>
    <string name="other_services">Other Services:</string>
    <string name="enter_company_location">Enter Company Location</string>
    <string name="location">Location:</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_number">Phone Number:</string>
    <string name="enter_license_number">Enter License Number</string>
    <string name="service_1">Service 1</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="choose_password">Choose Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_company">Register Company</string>

    <array name="services">
        <item>Select Service Offered</item>
        <item>General Mechanical repair</item>
        <item>Puncture Repair</item>
        <item>Towing Services</item>
    </array>

    <array name="serviceProviders">
        <item>Select Service Provider</item>
        <item>Maseno Garage</item>
        <item>Orange House Garage</item>
        <item>Mabungo Garage</item>
        <item>School Garage</item>
        <item>Nyawita Garage</item>
        <item>New Mechanic</item>
    </array>
    <string name="title_activity_service_login">Service Provider Login</string>
    <string name="title_activity_company_profile">Company Profile</string>
    <string name="company_details">Company Details</string>
    <string name="services_offered">Services Offered:</string>
    <string name="todo">TODO</string>
    <string name="logout">LogOut</string>
    <string name="job_requests">Job Requests</string>
    <string name="title_activity_mecahics_map">Mechanics Map</string>
    <string name="engage_provider">Engage Provider</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="satellite">Satellite</string>
    <string name="none">None</string>
    <string name="normal">Normal</string>
    <string name="title_activity_tow_map">Towing Services Map</string>
    <string name="title_activity_engage_provider">Engage Provider</string>
    <string name="enter_service_required">Enter Service Required:</string>
    <string name="select_preffred_provider">Select Preffred Provider</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="send_service_request">Send service Request</string>
    <string name="title_activity_job_requests">Job Requests</string>
    <string name="username">UserName</string>
    <string name="phone">Phone</string>
    <string name="service">Service</string>
</resources>
