<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/adamina"
        android:text="@string/login_page"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_mail_r"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/adamina"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/edt_password_r"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/adamina"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/edt_mail_r"
        app:layout_constraintStart_toStartOf="@+id/edt_mail_r"
        app:layout_constraintTop_toBottomOf="@+id/edt_mail_r" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="157dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/adamina"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/edt_password_r"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_r" />

    <TextView
        android:id="@+id/txt_to_reg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/adamina"
        android:text="@string/i_don_t_have_an_account"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/edt_password_r"
        app:layout_constraintStart_toStartOf="@+id/edt_password_r"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <ProgressBar
        android:id="@+id/re_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="154dp"
        android:layout_height="147dp"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/nav_header_height"
        android:progressDrawable="@android:drawable/ic_menu_rotate"
        android:progressTint="@color/mechanic_background"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.391" />

</androidx.constraintlayout.widget.ConstraintLayout>
